test/files/invalid/enum_with_alignment.fbs
enum A: uint8 (force_align: 1) { X, Y }
